feat: init firebase

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@angular/common": "^14.2.0",
     "@angular/compiler": "^14.2.0",
     "@angular/core": "^14.2.0",
+    "@angular/fire": "^7.5.0",
     "@angular/forms": "^14.2.0",
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
@@ -22,6 +23,7 @@
     "angular-toastify": "^1.0.4",
     "animate.css": "^4.1.1",
     "date-fns": "^2.29.3",
+    "firebase": "^9.17.2",
     "ngx-bootstrap": "^0.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
